--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # These are required to run the tests.
-Django
+Django>=1.6,<1.6.99
 flake8
 
 # Everything else is in a Django-version-free version
